# TI_301_PRJ_P2-SC2-3_DURAND_GUICHARD_RILI

./: CMakeLists.txt  README.md  caracterteristic.c  caracterteristic.h  characteristic.c  characteristic.h  characterteristic.c  characterteristic.h  graph.c  graph.h  graph.txt  hasse.c  hasse.h  hasse2.c  hasse2.h  main.c  main2.c  markov_check.c  markov_check.h  matrix.c  matrix.h  mermaid_gen.c  mermaid_gen.h  period.c  period.h  pile.c  pile.h  tarjan.c  tarjan.h  utils.c  utils.h
